# quiz_game

./: .gitignore  pyproject.toml
src/: app.py
src/application/contracts/: questions_repository_interface.py  questions_service_interface.py
src/application/dtos/: question_dto.py
src/application/services/: questions_service_impl.py
src/domain/questions/: question.py  questions.py
src/infrastructure/adapters/: database.py
src/infrastructure/models/: question_model.py
src/infrastructure/repositories/: questions_repository_impl.py
src/interfaces/: __init__.py
src/interfaces/adapters/: dict_to_object.py
src/interfaces/api/: __init__.py  questions_controller.py
src/interfaces/api/questions/: __init__.py  questions_controller.py
tests/infrastructure/: conftest.py
tests/infrastructure/models/: test_question_model.py
tests/infrastructure/repositories/: test_questions_repository_impl.py
tests/unittest/domain/questions/: test_question.py  test_questions.py
