[tool.poetry]
name = "Quiz Game"
version = "0.1.0"
description = "This is a simple quiz game in python with flask"
authors = ["jacksonsr45 <jackson.severino.rocha@escola.pr.gov.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "^2.0.19"
sqlalchemy-json = "^0.6.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"
pytest = "^7.4.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

include = ["src"]

exclude = ["tests", "docs"]
